--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ button {
 #zodiac-ruling-planet{ 
     font-size: 18px; 
     line-height: 1.6;
+    text-align: left;
 } 
 
 .aries, .leo, .sagittarius { 
